<?xml version="1.0"?>
<package>
  <name>riptide_hardware</name>
  <version>0.0.17</version>
  <description>Hardware abstraction layer for OSU's Riptide AUV.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>
  <author email="justice.251@osu.edu">Benji Justice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_python</run_depend>

  <export>
  </export>
</package>
