<?xml version="1.0"?>
<package>
  <name>riptide_hardware</name>
  <version>0.0.17</version>
  <description>Hardware abstraction layer for OSU's Riptide AUV.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>
  <author email="justice.251@osu.edu">Benji Justice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>riptide_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>imu_3dm_gx4</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>riptide_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>camera_calibration</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>python-scipy</run_depend>

  <export>
  </export>
</package>
