<?xml version="1.0"?>
<package>
  <name>riptide_msgs</name>
  <version>0.0.13</version>
  <description>Custom messages for OSU's Riptide AUV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
