<?xml version="1.0"?>
<package>
  <name>riptide_msgs</name>
  <version>0.0.17</version>
  <description>Custom messages for OSU's Riptide AUV.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="justice.251@osu.edu">Benji Justice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
