<?xml version="1.0"?>
<package>
  <name>riptide_navigation</name>
  <version>0.0.3</version>
  <description>Navigation stack for OSU's Riptide AUV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide_msgs</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>

  <run_depend>control_toolbox</run_depend>

  <export>
  </export>
</package>
