<?xml version="1.0"?>
<package>
  <name>riptide_pid</name>
  <version>0.0.2</version>
  <description>PID controllers for OSU's Riptide AUV.</description>

  <maintainer email="mahaffey.60@osu.edu">Sara Mahaffey</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide</url>

  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
