<?xml version="1.0"?>
<package>
  <name>riptide_robot</name>
  <version>0.0.15</version>
  <description>Metapackage for OSU's Riptide AUV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>riptide_autonomy</run_depend>
  <run_depend>riptide_estimation</run_depend>
  <run_depend>riptide_description</run_depend>
  <run_depend>riptide_gazebo</run_depend>
  <run_depend>riptide_launch</run_depend>
  <run_depend>riptide_msgs</run_depend>
  <run_depend>riptide_controls</run_depend>
  <run_depend>riptide_serial</run_depend>
  <run_depend>riptide_teleop</run_depend>
  <run_depend>riptide_vision</run_depend>

  <export>
    <metapackage />
  </export>
</package>
