<?xml version="1.0"?>
<package>
  <name>riptide_robot</name>
  <version>0.0.17</version>
  <description>Metapackage for OSU's Riptide AUV.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="justice.251@osu.edu">Benji Justice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>riptide_bringup</run_depend>
  <run_depend>riptide_calibration</run_depend>
  <run_depend>riptide_controllers</run_depend>
  <run_depend>riptide_description</run_depend>
  <run_depend>riptide_gazebo</run_depend>
  <run_depend>riptide_msgs</run_depend>
  <run_depend>riptide_teleop</run_depend>

  <export>
    <metapackage />
  </export>
</package>
